# video_app

./: .gitignore  CMakeLists.txt
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp
